infrastructure/kubernetes/ingress/nginx-ingress-controller.yaml
# NGINX Ingress Controller Installation
# This uses the official NGINX Ingress Controller Helm chart values
# Install with: helm install nginx-ingress ingress-nginx/ingress-nginx -f nginx-ingress-controller.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
